# autotrade

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  ANE_REFERENCE.md  Dockerfile  HRM  Makefile  Makefile.hrm  Makefile.hrm_kernels  Package.swift  README.md  accel_model.py  advanced_risk.py  ane_hrm_train  ane_hrm_train.m  ane_training.py  bag_io.py  benchmark_ingest.py  binance_absorb.py  binance_cache.py  binance_pairs_cleaned.json  bootstrap_candles_db.py  cache.py  candle_cache.py  candle_cache.py.bak  coin_graph.py  coinbase_client.py  config.py  create_hrm_ckpt.py  dashboard_showdown.py  docker-compose.yml  docker_babysitter.py  dreamer-architecture.html  dreamer_simd_audit.py  enhanced_paper_trading.py  enhanced_strategies.py  entrypoint.sh  fetch_1y_1m.py  (+45 more)
.fanout/: journal.md  plan.yaml
.hermes/: tmp_alignment_debug.py  tmp_training_bias_probe.py
Sources/CDuckDB/: CMakeLists.txt  duckdb_wrapper.c  duckdb_wrapper.h  module.modulemap
autoresearch/: auto.py  prepare.py
codec_models/: __init__.py  base_codec.py  codec_01_volatility_breakout.py  codec_02_momentum_trend.py  codec_03_mean_reversion.py  codec_04_trend_following.py  codec_05_pairs_trading.py  codec_06_grid_trading.py  codec_07_volume_profile.py  codec_08_order_flow.py  codec_09_correlation_trading.py  codec_10_liquidity_making.py  codec_11_sector_rotation.py  codec_12_composite_alpha.py  codec_13_rsi_reversal.py  codec_14_bollinger_bands.py  codec_15_macd_crossover.py  codec_16_stochastic_kd.py  codec_17_adx_trend_strength.py  codec_18_vwap_mean_reversion.py  codec_generic.py  (+6 more)
(+300 files in other folders)
